apps/bjj/prod/networking/gateways/gateway-grafana.yaml
# Gateway pentru accesul la Grafana în producție
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-grafana
  namespace: bjj
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    hostname: grafana.cardano.vip
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: grafana.cardano.vip
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: grafana-cardano-vip-tls
    allowedRoutes:
      namespaces:
        from: All
